--- a/estructura_DOM_templatesLiteral_C6S/css/index.css
+++ b/estructura_DOM_templatesLiteral_C6S/css/index.css
@@ -24,6 +24,13 @@ body {
     transition: scale 1s;
 }
 
+.tarjeta h3, .contenedor-subt h2{
+    text-align: center;
+    font-weight: bold;
+    font-size: 28px;
+    text-shadow: 1px 1px 1px;
+}
+
 .tarjeta:hover {
     scale: 1.2;
     cursor: pointer;
