--- a/ToDo_inicial/styles/lista-tareas.css
+++ b/ToDo_inicial/styles/lista-tareas.css
@@ -230,7 +230,7 @@ a {
 }
 #skeleton p{
   background-color: rgb(214, 214, 214);
-  color: rgb(214, 214, 214);
+  color: black;
 }
 #skeleton .not-done{
   background-color: rgb(189, 189, 189);
